[package]
name = "modman"
version = "0.1.0"
description = "modman"
authors = ["Mettwasser"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0.114"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = ["fs-all", "dialog-open"] }
surrealdb = { version = "1.2.2", features = ["kv-rocksdb"] }
tokio = { version = "1.36.0", features = ["process"] }
anyhow = "1.0.80"
chrono = { version = "0.4.34", features = ["serde", "now"] }
reqwest = { version = "0.11.25" }
zip = { version = "0.6.6" }
zip-extensions = { version = "0.6.2" }
async-recursion = { version = "1.0.5" }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
